--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -48,19 +48,20 @@
         fill: $activ;
     }
 }
-.textarea::placeholder {
-    font-family: inherit;
-    font-size: 12px;
-    line-height: 1.67;
-    letter-spacing: 0.01em;
-
-    color: rgba(117, 117, 117, 0.5);
-}
 .textarea {
     height: 120px;
     resize: none;
-
+    
     padding: 12px 16px;
+    
+    &::placeholder {
+        font-family: inherit;
+        font-size: 12px;
+        line-height: 1.67;
+        letter-spacing: 0.01em;
+    
+        color: rgba(117, 117, 117, 0.5);
+    }
 }
 .form__button {
     margin: 0 auto;
